--- a/index.html
+++ b/index.html
@@ -1,8 +1,46 @@
-林岳IT工作室
+<html>
+<head>
+<script type="text/javascript" src="http://www.francescomalagrino.com/BootstrapPageGenerator/3/js/jquery-2.0.0.min.js"></script>
+<script type="text/javascript" src="http://www.francescomalagrino.com/BootstrapPageGenerator/3/js/jquery-ui"></script>
+<link href="http://www.francescomalagrino.com/BootstrapPageGenerator/3/css/bootstrap-combined.min.css" rel="stylesheet" media="screen">
+<script type="text/javascript" src="http://www.francescomalagrino.com/BootstrapPageGenerator/3/js/bootstrap.min.js"></script>
+</head>
+<body>
+<div class="container-fluid">
+        <div class="row-fluid">
+                <div class="span12">
+                        <div class="row-fluid">
+                                <div class="span8">
+                                        <div class="page-header">
+                                                <h1>
+                                                        计算机维护<small>detial:desktop and notebook, fix and install system,etc.</small>
+                                                </h1>
+                                        </div>
+                                        <div class="page-header">
+                                                <h1>
+                                                        网络维护<small>detial:fix the net,etc.</small>
+                                                </h1>
+                                        </div>
+                                        <div class="page-header">
+                                                <h1>
+                                                        网站建设及维护<small>detial:build up the website and manage,etc.</small>
+                                                </h1>
+                                        </div>
+                                </div>
+                                <div class="span4">
+                                        <h2>
+                                                联系方式:
+                                        </h2>
+                                        <h3>
+                                                mail：903095591@qq.com
+                                        </h3>
 
-致力于
-计算机维护 detial:desktop and notebook, fix and install system,etc.
-网络维护 detial:fix the net,etc.
-网站建设及维护等等 detial:build up the website and manage,etc.
-mail：903095591@qq.com
+                                </div>
+                        </div>
+                </div>
+        </div>
+</div>
+</body>
+</html>
+@qq.com
 
