--- a/index.html
+++ b/index.html
@@ -1,46 +1,25 @@
 <html>
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
-<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-<script type="text/javascript" src="http://apps.bdimg.com/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
-<script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container-fluid">
-        <div class="row-fluid">
-                <div class="span12">
-                        <div class="row-fluid">
-                                <div class="span8">
-                                        <div class="page-header">
-                                                <h1>
-                                                        计算机维护<small>detial:desktop and notebook, fix and install system,etc.</small>
-                                                </h1>
-                                        </div>
-                                        <div class="page-header">
-                                                <h1>
-                                                        网络维护<small>detial:fix the net,etc.</small>
-                                                </h1>
-                                        </div>
-                                        <div class="page-header">
-                                                <h1>
-                                                        网站建设及维护<small>detial:build up the website and manage,etc.</small>
-                                                </h1>
-                                        </div>
-                                </div>
-                                <div class="span4">
-                                        <h2>
-                                                联系方式:
-                                        </h2>
-                                        <h3>
-                                                mail：903095591@qq.com
-                                        </h3>
-
-                                </div>
-                        </div>
-                </div>
-        </div>
-</div>
+<h1>
+	计算机维护
+</h1>
+<p>
+<h2>detial:desktop and notebook, fix and install system,etc.</h2><p>
+<h1>网络维护</h1>
+<p>
+<h2>detial:fix the net,etc.</h2>
+<p>
+<h1>网站建设及维护</h1>
+<p>
+<h2>detial:build up the website and manage,etc.	</h2>                                               
+<p>
+<h2>联系方式:</h2>
+<p>
+<h1>contact  mail：903095591@qq.com</h1>
+<p>
 </body>
 </html>
 
