--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <html>
 <head>
-<meta content="text/html; charset=utf-8" http-equiv="content-type"/>
+<meta content="text/html; charset=utf-8" http-equiv="content-type"/><script>
+	
+	console.log("我的简历");
+	console.log("应聘 linux工程师
+姓名 廖城东
+电话 13425912837
+邮件 903095591@qq.com
+性别 男
+年龄 29
+专业 电子信息工程
+学历 本科
+地址 佛山市平洲林岳
+主要经验
+主要从事计算机运维工作，主要负责日常信息设备软硬件故障处理以及
+多个小型B/S应用开发及维护。
+希望往后从事linux嵌入式及网络相关工作。");
+	</script>
+
 </head>
 <body>
 <h2>网站建设及维护</h2>
