--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="content-type"/><script>
 	
-	console.log("主要从事计算机运维工作，主要负责日常信息设备软硬件故障处理以及多个小型B/S应用开发及维护。希望往后从事linux嵌入式及网络相关工作");
+	console.log("主要从事计算机运维工作，主要负责日常信息设备软硬件故障处理以及多个小型B/S应用开发及维护。希望往后从事linux维护及网络相关工作");
 	</script>
 
 </head>
