change my skill

--- a/index.html
+++ b/index.html
@@ -2,21 +2,19 @@
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="content-type"/><script>
 	
-	console.log("主要从事计算机运维工作，主要负责日常信息设备软硬件故障处理以及多个小型B/S应用开发及维护。希望往后从事linux维护及网络相关工作");
+	console.log("test");
 	</script>
 
 </head>
 <body>
-<h2>网站建设及维护</h2>
 <p>
 <h2>
-计算机维护
+计算机,服务器维护，网络排障
 </h2>
-<p>
-<h2>网络维护</h2>
-<p>
-<p>
-                                              
+<p> 
+<h2>
+大量数据处理，筛选，提取
+</h2>
 <p>
 <h2>联系方式:</h2>
 <h2>mail：color_liao@sina.com</h2>
