Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+# 服务内容 
+	重装系统
+	服务器维护
+	网络排障
+
+
 <html>
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="content-type"/><script>
@@ -7,12 +13,9 @@
 
 </head>
 <body>
-# test
 <p>
 <h2>
-重装系统
-服务器维护
-网络排障
+
 </h2>
 <p> 
 <h2>
